# OpenCV

./: CMakeLists.txt  LICENSE  README.md  main.cpp
Chapter 1/: main.cpp
Chapter 2/: main.cpp
Chapter 3/: main.cpp
Chapter 6/: main.cpp
Chapter 7/: main.cpp
Learning/Chapter 4/: main.cpp
Learning/Chapter 5/: main.cpp
Learning/Chapter 8/: main.cpp
Object Detection/: HaarCascade_FaceDetection.cpp
Object Detection/DNNfaceDetection/: CMakeLists.txt  main.cpp
Webcam Face Detection/: RGB_FaceDetection.cpp
